# chairdelure

./: .gitignore  LoRa.ipynb  Makefile  Pipfile  README.md  app.py  extract_messages.sh  pca.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  train_model.sh
alpaca.cpp/: chat  chat.cpp
data/: README.md
discord_bot/: bot.py  commands.py
lora-daniel/: adapter_config.json
notebooks/: LoRa.ipynb  bot_website.ipynb  cleaning.ipynb  gpt2.ipynb  markov.ipynb  pca.ipynb
scripts/: extract_messages.sh
templates/: about.html  header.html  index.html  index.md
test/: app.py  bot_test.py  chris_results.txt  data_clean.py  expirements.py  gpt2.py  markov.ipynb  markov.py  random_test.py  run.py  test.py  test.txt
