[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Chairdelure"
version = "0.0.1"
readme = "README.md"
requires-python = "==3.11"
dependencies = [
    "appnope==0.1.3", 
    "asttokens==2.2.1", 
    "backcall==0.2.0", 
    "certifi==2022.12.7", 
    "contourpy==1.0.7", 
    "cycler==0.11.0", 
    "decorator==5.1.1", 
    "distlib==0.3.6", 
    "executing==1.2.0", 
    "filelock==3.9.0", 
    "fonttools==4.39.0", 
    "ipython==8.11.0", 
    "jedi==0.18.2", 
    "joblib==1.2.0", 
    "kiwisolver==1.4.4", 
    "matplotlib==3.7.1", 
    "matplotlib-inline==0.1.6", 
    "nbqa==1.6.3", 
    "numpy==1.24.2", 
    "packaging==23.0", 
    "pandas==1.5.3", 
    "parso==0.8.3", 
    "pexpect==4.8.0", 
    "pickleshare==0.7.5", 
    "Pillow==9.4.0", 
    "pipenv==2023.2.18", 
    "platformdirs==3.1.1", 
    "prompt-toolkit==3.0.38", 
    "ptyprocess==0.7.0", 
    "pure-eval==0.2.2", 
    "Pygments==2.14.0", 
    "pyparsing==3.0.9", 
    "python-dateutil==2.8.2", 
    "pytz==2022.7.1", 
    "scikit-learn==1.2.1", 
    "scipy==1.10.1", 
    "six==1.16.0", 
    "stack-data==0.6.2", 
    "threadpoolctl==3.1.0", 
    "tokenize-rt==5.0.0", 
    "tomli==2.0.1", 
    "traitlets==5.9.0", 
    "virtualenv==20.20.0", 
    "virtualenv-clone==0.5.7", 
    "wcwidth==0.2.6"
]

[project.optional-dependencies]
dev = [
  "black>=22.10.0",
  "pytest>=7.2.0",
  "pytest-cov>=4.0.0",
  "ruff>=0.0.219",
]

[tool.ruff]
ignore = ["E501"]
select = ["E", "F", "I", "W"]
line-length = 79
fixable = ["I"]
exclude = [".env", ".venv", "venv", "notebooks"]
show-source = true

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.black]
line-length = 79
extend-exclude = '''
/(
  | .env
  | .venv
  | venv
  | notebooks
)/
'''
